k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finish-app
  labels:
    name: finish-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
